Update S3SdkTestAll.java